Fix active nav-tab background colors in dark mode

--- a/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
+++ b/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
@@ -1,4 +1,4 @@
-﻿/// <reference path="colors.scss" />
+/// <reference path="colors.scss" />
 /// <reference path="variables.scss" />
 
 :root {
@@ -136,4 +136,14 @@ h4 {
 
 .modal-footer {
 	border-top-color: var(--border-separator-color);
+}
+
+.nav-tabs {
+	border-color: var(--bs-light);
+
+	.nav-item.show .nav-link, .nav-link.active {
+		color: color: var(--bs-dark);
+		background-color: var(--bs-white);
+		border-color: var(--bs-light) var(--bs-light) var(--bs-white);
+	}
 }
